--- a/packages/locale/src/translations/sv.json
+++ b/packages/locale/src/translations/sv.json
@@ -82,7 +82,6 @@
             "consistency_error": "Din utcheckning kunde inte behandlas eftersom vissa detaljer har ändrats. Granska din beställning och försök igen."
         },
         "common": {
-            "back_action": "Back",
             "confirm_action": "Bekräfta",
             "cancel_action": "Annullera",
             "close_action": "Stäng",
@@ -552,11 +551,7 @@
             "quantity_invalid_error": "Kvantitet måste vara ett tal",
             "quantity_max_error": "Kvantiteten får inte överstiga mängden ”Kvar att tilldela”.",
             "quantity_min_error": "Kvantiteten får inte vara mindre än 0",
-            "custom_item_quantity_error": "Alla kvantiteter av denna specialprodukt måste tilldelas samma destination, eftersom den skapades specifikt för detta beställningsutkast.",
-            "choose_shipping_address": "Välj en leveransadress",
-            "multishipping_unavailable_action": "Multi-Address Shipping Unavailable",
-            "multishipping_unavailable_message": "Multi-address shipping is unavailable when a promotion adds a free item to your cart.",
-            "checkout_switched_to_single_shipping": "Your checkout has been automatically updated to use a single shipping address. Shipping to multiple addresses is unavailable when a promotional free item is in your cart."
+            "custom_item_quantity_error": "Alla kvantiteter av denna specialprodukt måste tilldelas samma destination, eftersom den skapades specifikt för detta beställningsutkast."
         },
         "social": {
             "share_action": "Dela med sig",
